--- a/movies/templates/base.html
+++ b/movies/templates/base.html
@@ -1,32 +1,38 @@
 <!DOCTYPE html>
 <html lang="cs">
 <head>
+    <!-- Blok s titulkem stránky -->
     <title>{% block title %}Filmotéka{% endblock %}</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Připojení externích CSS -->
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-    <!-- Add additional CSS in static file -->
+    <!-- Načtení adresy statických souborů webu - musí být před prvním použití identifikátoru static -->
     {% load static %}
+    <!-- Připojení vlastního CSS souboru umístěného ve struktuře složky static -->
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
 <body>
+    <!-- Záhlaví stránky -->
     <header class="jumbotron-fluid p-5 text-center bg-dark">
         <h1 class="text-white text-uppercase display-3">Malá filmová databáze</h1>
     </header>
+    <!-- Navigační lišta -->
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
       <!-- Brand -->
       <a class="navbar-brand text-warning" href="#">MFD</a>
 
-      <!-- Toggler/collapsibe Button -->
+      <!-- Přepínací tlačítko pro mobilní zobrazení -->
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <!-- Navbar links -->
+      <!-- Hlavní menu -->
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav">
           <li class="nav-item">
+            <!-- Odkaz na úvodní stránku webu -->
             <a class="nav-link active" href="{% url 'index' %}">Úvodní stránka</a>
           </li>
           <li class="nav-item">
@@ -38,20 +44,28 @@
         </ul>
       </div>
     </nav>
-<div class="container-fluid">
-    {% block content %}{% endblock %}
-</div>
-<footer class="container-fluid text-center">
-    <hr>
-    <p><img src="{% static 'img/skola-logo.png' %}" alt="Logo školy"> </p>
-    <p>&copy; 2021 - SŠPU Opava</p>
-</footer>
-<!-- jQuery library -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<!-- Popper JS -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-<!-- Latest compiled JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-{% block scripts %}{% endblock %}
+    <!-- Hlavní blok stránky -->
+    <main>
+        <div class="container-fluid">
+            <!-- Zde bude vsunut blok s obsahem aktuální stránky -->
+            {% block content %}{% endblock %}
+        </div>
+    </main>
+    <!-- Zápatí stránky -->
+    <footer class="container-fluid text-center">
+        <hr>
+        <!-- Vykreslí logo školy ze statického souboru skola-logo.png -->
+        <p><img src="{% static 'img/skola-logo.png' %}" alt="Logo školy"></p>
+        <p>&copy; 2021 - SŠPU Opava</p>
+    </footer>
+    <!-- Připojení externích JS knihoven -->
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <!-- Popper JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <!-- Připravený blok pro vložení/připojení dalších skriptů podle potřeby jednotlivých stránek -->
+    {% block scripts %}{% endblock %}
 </body>
 </html>
