--- a/movies/templates/base.html
+++ b/movies/templates/base.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <!-- Načtení adresy statických souborů webu - musí být před prvním použití identifikátoru static -->
     {% load static %}
+    <!-- Blok určený k připojování dalších externích stylů -->
+    {% block css %}
+    {% endblock %}
     <!-- Připojení vlastního CSS souboru umístěného ve struktuře složky static -->
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
