--- a/movies/templates/film/list.html
+++ b/movies/templates/film/list.html
@@ -8,7 +8,7 @@
 {% block content %}
 <div class="row mb-3">
     <div class="col-sm-12 bg-warning">
-        <h2 class="display-4 text-center">{{ view_title }}</h2>
+        <h2 class="display-4 text-center">{{ view_head }}</h2>
     </div>
 </div>
 <div class="row">
@@ -17,7 +17,7 @@
     <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2">
         <div class="card">
             {% if film.poster %}
-            <img class="card-img-top" src="{{ film.poster.url }}" alt="{{ film.title }}">
+                <img class="card-img-top" src="{{ film.poster.url }}" alt="{{ film.title }}">
             {% endif %}
             <div class="card-body">
                 <!-- Odkaz ještě musí být doplněn o adresu stránky s detailem filmu -->
