--- a/movies/templates/page/navbar.html
+++ b/movies/templates/page/navbar.html
@@ -14,20 +14,28 @@
                 <!-- Odkaz na úvodní stránku webu -->
                 <a class="nav-link active" href="{% url 'index' %}">Úvodní stránka</a>
             </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'films' %}">Filmy</a>
-          </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'films' %}">Filmy</a>
+            </li>
             <!-- Dropdown -->
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-                Žánry
-              </a>
-              <div class="dropdown-menu">
-                 {% for genre in genres %}
-                    <a class="dropdown-item" href="{% url 'film-genre' genre.name %}">{{ genre.name }}</a>
-                 {% endfor %}
-              </div>
+                <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                    Žánry
+                </a>
+                <div class="dropdown-menu">
+                    {% for genre in genres %}
+                        <a class="dropdown-item" href="{% url 'film-genre' genre.name %}">{{ genre.name }}</a>
+                    {% endfor %}
+                </div>
             </li>
-         </ul>
+        </ul>
+        <ul class="navbar-nav">
+            {% if user.is_authenticated %}
+                <li class="nav-item"><a href="{% url 'index' %}" class="nav-link">User: {{ user.get_username }}</a></li>
+                <li class="nav-item"><a href="{% url 'logout' %}" class="nav-link">Logout</a></li>
+            {% else %}
+                <li class="nav-item"><a href="{% url 'login' %}?next={{ request.path }}" class="nav-link">Login</a></li>
+            {% endif %}
+        </ul>
     </div>
 </nav>
